# qmx

./: .gitignore  CLAUDE.md  INFRA.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
plan/: qmx-architecture.md  qmx-deployment.md  qmx-learnings.md  qmx-ml-notes.md  qmx-plan.md
src/qmx/: __init__.py  capture.py  chat.py  cli.py  config.py  consolidate.py  embed.py  index.py  learnings.py  mcp_server.py  promote.py  rerank.py  scope.py  search.py  service.py  session.py  store.py  watch.py
src/qmx/chunk/: __init__.py  chat.py  code.py  doc.py
tests/: fakes.py  test_chat.py  test_chunk_code.py  test_config.py  test_consolidate.py  test_embed_ollama.py  test_incremental.py  test_index_docs.py  test_index_search.py  test_learnings.py  test_mcp_server.py  test_memory.py  test_promote.py  test_refresh.py  test_rerank.py  test_reranker.py  test_search_rrf.py  test_service.py  test_session.py  test_sources_remove.py  test_store_roundtrip.py  test_watch.py  test_watch_code_roots.py
