[project]
name = "qmx"
version = "0.0.0"
description = "Query Memory indeX — local, private, Qwen-powered semantic search over code and chats"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
qmx = "qmx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmx"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "integration: needs a live Ollama backend (QMX_OLLAMA_URL); skipped when unreachable",
]
